objects/mcsocsel10__SocialSellingInformationalActivity__c.object
<CustomObject>
    <fields>
        <fullName>mcsocsel10__PostID__c</fullName>
        <label>Post ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>expand</fullName>
                    <label>Expand</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mcsocsel10__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Social Selling Informational Activity</label>
    <nameField>
        <label>Social Selling Informational Activity Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Selling Informational Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>